--- a/src/plove-old/Makefile.vc
+++ b/src/plove-old/Makefile.vc
@@ -55,10 +55,13 @@ missing-library:
 	@ echo *** No Tk installation found -- skipping Plove
 
 depend:
-	@ echo *** make depend not (yet) supported with MSVC
+	$(MAKEDEPEND) -I../../include -fMakefile.vc -- *.cc
 
 clean:
 	-del tclcode.cc *.obj plove.exe 2> nul
 	-del *.ilk *.idb *.pdb 2> nul
 
 # DO NOT DELETE THIS LINE -- make depend depends on it.
+plove.obj: plove.cc \
+  tclcode.cc
+tclcode.obj: tclcode.cc
