--- a/src/utils/Makefile.vc
+++ b/src/utils/Makefile.vc
@@ -19,10 +19,13 @@ opp_replace.exe: opp_replace.c
 	$(CC) $(CFLAGS) opp_replace.c
 
 depend:
-	@ echo *** make depend not (yet) supported with MSVC
+	$(MAKEDEPEND) -I../../include -fMakefile.vc -- *.cc *.c
+
 clean:
 	-del *.obj seedtool.exe tcl2c.exe opp_replace.exe 2> nul
 	-del *.ilk *.idb *.pdb 2> nul
 
 # DO NOT DELETE THIS LINE -- make depend depends on it.
-
+seedtool.obj: seedtool.cc
+opp_replace.obj: opp_replace.c
+tcl2c.obj: tcl2c.c
