--- a/src/sim/Makefile.vc
+++ b/src/sim/Makefile.vc
@@ -150,7 +150,7 @@ missing-library:
 	@ echo *** No PVM installation found -- skipping sim_pvm
 
 depend:
-	@ echo *** make depend not (yet) supported with MSVC
+	$(MAKEDEPEND) -I../../include -fMakefile.vc -- *.cc
 
 clean:
 	-del *.obj
@@ -160,61 +160,383 @@ clean:
 
 
 # DO NOT DELETE THIS LINE -- make depend depends on it.
-
-carray.obj: ../../include/macros.h ../../include/ctypes.h ../../include/chead.h ../../include/cobject.h ../../include/defs.h ../../include/util.h ../../include/errmsg.h ../../include/carray.h
-ccor.obj: ../../include/ccor.h ../../include/cobject.h ../../include/defs.h ../../include/util.h
-cdensity.obj: ../../include/macros.h ../../include/ctypes.h ../../include/chead.h ../../include/cobject.h ../../include/defs.h ../../include/util.h ../../include/cdensity.h
-cdensity.obj: ../../include/cstat.h
-cdetect.obj: ../../include/csimul.h ../../include/defs.h ../../include/util.h ../../include/errmsg.h ../../include/chead.h ../../include/cobject.h ../../include/cmsgheap.h
-cdetect.obj: ../../include/coutvect.h ../../include/ccor.h ../../include/cdetect.h ../../include/cstat.h
-cfsm.obj: ../../include/macros.h ../../include/ctypes.h ../../include/chead.h ../../include/cobject.h ../../include/defs.h ../../include/util.h ../../include/cfsm.h
-cgate.obj: ../../include/cmessage.h ../../include/cobject.h ../../include/defs.h ../../include/util.h ../../include/carray.h ../../include/cpar.h ../../include/csimul.h ../../include/errmsg.h
-cgate.obj: ../../include/chead.h ../../include/cmsgheap.h ../../include/coutvect.h ../../include/ccor.h ../../include/cmodule.h ../../include/cqueue.h ../../include/cgate.h
-cgate.obj: ../../include/cenvir.h ../../include/macros.h ../../include/ctypes.h
-chead.obj: ../../include/macros.h ../../include/ctypes.h ../../include/chead.h ../../include/cobject.h ../../include/defs.h ../../include/util.h
-chist.obj: ../../include/macros.h ../../include/ctypes.h ../../include/chead.h ../../include/cobject.h ../../include/defs.h ../../include/util.h ../../include/cdetect.h ../../include/cstat.h
-chist.obj: ../../include/chist.h ../../include/cdensity.h
-cksplit.obj: ../../include/macros.h ../../include/ctypes.h ../../include/chead.h ../../include/cobject.h ../../include/defs.h ../../include/util.h ../../include/cenvir.h
-cksplit.obj: ../../include/cksplit.h ../../include/cdensity.h ../../include/cstat.h
-cllist.obj: ../../include/macros.h ../../include/ctypes.h ../../include/chead.h ../../include/cobject.h ../../include/defs.h ../../include/util.h ../../include/cllist.h
-cmessage.obj: ../../include/macros.h ../../include/ctypes.h ../../include/chead.h ../../include/cobject.h ../../include/defs.h ../../include/util.h ../../include/cmodule.h
-cmessage.obj: ../../include/ccor.h ../../include/carray.h ../../include/cqueue.h ../../include/cgate.h ../../include/csimul.h ../../include/errmsg.h ../../include/cmsgheap.h
-cmessage.obj: ../../include/coutvect.h ../../include/cmessage.h ../../include/cpar.h
-cmodule.obj: ../../include/cmodule.h ../../include/cobject.h ../../include/defs.h ../../include/util.h ../../include/ccor.h ../../include/chead.h ../../include/carray.h ../../include/cqueue.h
-cmodule.obj: ../../include/cgate.h ../../include/csimul.h ../../include/errmsg.h ../../include/cmsgheap.h ../../include/coutvect.h ../../include/cmessage.h ../../include/cpar.h
-cmodule.obj: ../../include/ctypes.h ../../include/cnetmod.h ../../include/cenvir.h
-cmsgheap.obj: ../../include/macros.h ../../include/ctypes.h ../../include/chead.h ../../include/cobject.h ../../include/defs.h ../../include/util.h ../../include/cmessage.h
-cmsgheap.obj: ../../include/carray.h ../../include/cpar.h ../../include/csimul.h ../../include/errmsg.h ../../include/cmsgheap.h ../../include/coutvect.h ../../include/ccor.h
-cnetmod.obj: ../../include/cpar.h ../../include/cobject.h ../../include/defs.h ../../include/util.h ../../include/carray.h ../../include/cenvir.h ../../include/cnetmod.h
-cnetmod.obj: ../../include/cmodule.h ../../include/ccor.h ../../include/chead.h ../../include/cqueue.h ../../include/cgate.h ../../include/csimul.h ../../include/errmsg.h
-cnetmod.obj: ../../include/cmsgheap.h ../../include/coutvect.h
-cobject.obj: ../../include/csimul.h ../../include/defs.h ../../include/util.h ../../include/errmsg.h ../../include/chead.h ../../include/cobject.h ../../include/cmsgheap.h
-cobject.obj: ../../include/coutvect.h ../../include/ccor.h ../../include/cenvir.h ../../include/macros.h ../../include/ctypes.h
-coutvect.obj: ../../include/coutvect.h ../../include/cobject.h ../../include/defs.h ../../include/util.h ../../include/cmodule.h ../../include/ccor.h ../../include/chead.h
-coutvect.obj: ../../include/carray.h ../../include/cqueue.h ../../include/cgate.h ../../include/csimul.h ../../include/errmsg.h ../../include/cmsgheap.h ../../include/cenvir.h
-cpacket.obj: ../../include/macros.h ../../include/ctypes.h ../../include/chead.h ../../include/cobject.h ../../include/defs.h ../../include/util.h ../../include/cpacket.h
-cpacket.obj: ../../include/cmessage.h ../../include/carray.h ../../include/cpar.h ../../include/csimul.h ../../include/errmsg.h ../../include/cmsgheap.h ../../include/coutvect.h
-cpacket.obj: ../../include/ccor.h
-cpar.obj: ../../include/cpar.h ../../include/cobject.h ../../include/defs.h ../../include/util.h ../../include/carray.h ../../include/cstat.h ../../include/macros.h ../../include/ctypes.h
-cpar.obj: ../../include/chead.h ../../include/errmsg.h ../../include/cmodule.h ../../include/ccor.h ../../include/cqueue.h ../../include/cgate.h ../../include/csimul.h
-cpar.obj: ../../include/cmsgheap.h ../../include/coutvect.h ../../include/cenvir.h
-cpsquare.obj: ../../include/macros.h ../../include/ctypes.h ../../include/chead.h ../../include/cobject.h ../../include/defs.h ../../include/util.h ../../include/cpsquare.h
-cpsquare.obj: ../../include/cdensity.h ../../include/cstat.h
-cqueue.obj: ../../include/macros.h ../../include/ctypes.h ../../include/chead.h ../../include/cobject.h ../../include/defs.h ../../include/util.h ../../include/cqueue.h
-csimul.obj: ../../include/cmodule.h ../../include/cobject.h ../../include/defs.h ../../include/util.h ../../include/ccor.h ../../include/chead.h ../../include/carray.h ../../include/cqueue.h
-csimul.obj: ../../include/cgate.h ../../include/csimul.h ../../include/errmsg.h ../../include/cmsgheap.h ../../include/coutvect.h ../../include/cmessage.h ../../include/cpar.h
-csimul.obj: ../../include/cenvir.h ../../include/ctypes.h ../../include/cnetmod.h ../../include/cstat.h
-cstat.obj: ../../include/cstat.h ../../include/cobject.h ../../include/defs.h ../../include/util.h ../../include/macros.h ../../include/ctypes.h ../../include/chead.h ../../include/cdetect.h
-cstk.obj: ../../include/cstk.h ../../include/ccor.h ../../include/cobject.h ../../include/defs.h ../../include/util.h ../../include/errmsg.h
-ctopo.obj: ../../include/macros.h ../../include/ctypes.h ../../include/chead.h ../../include/cobject.h ../../include/defs.h ../../include/util.h ../../include/cmodule.h ../../include/ccor.h
-ctopo.obj: ../../include/carray.h ../../include/cqueue.h ../../include/cgate.h ../../include/csimul.h ../../include/errmsg.h ../../include/cmsgheap.h ../../include/coutvect.h
-ctopo.obj: ../../include/cpar.h ../../include/cllist.h ../../include/ctopo.h
-ctypes.obj: ../../include/cpar.h ../../include/cobject.h ../../include/defs.h ../../include/util.h ../../include/carray.h ../../include/cmodule.h ../../include/ccor.h ../../include/chead.h
-ctypes.obj: ../../include/cqueue.h ../../include/cgate.h ../../include/csimul.h ../../include/errmsg.h ../../include/cmsgheap.h ../../include/coutvect.h ../../include/macros.h
-ctypes.obj: ../../include/ctypes.h
-cvarhist.obj: ../../include/macros.h ../../include/ctypes.h ../../include/chead.h ../../include/cobject.h ../../include/defs.h ../../include/util.h ../../include/cvarhist.h
-cvarhist.obj: ../../include/chist.h ../../include/cdensity.h ../../include/cstat.h
-cwatch.obj: ../../include/cwatch.h ../../include/cobject.h ../../include/defs.h ../../include/util.h
-util.obj: ../../include/util.h ../../include/defs.h ../../include/csimul.h ../../include/errmsg.h ../../include/chead.h ../../include/cobject.h ../../include/cmsgheap.h
-util.obj: ../../include/coutvect.h ../../include/ccor.h ../../include/macros.h ../../include/ctypes.h ../../include/cwatch.h ../../include/cpacket.h ../../include/cmessage.h
-util.obj: ../../include/carray.h ../../include/cpar.h
+carray.obj: carray.cc \
+  ../../include/macros.h \
+  ../../include/errmsg.h \
+  ../../include/carray.h \
+  ../../include/ctypes.h \
+  ../../include/chead.h \
+  ../../include/cobject.h \
+  ../../include/defs.h \
+  ../../include/util.h
+ccor.obj: ccor.cc \
+  ../../include/ccor.h \
+  ../../include/cobject.h \
+  ../../include/defs.h \
+  ../../include/util.h
+cdensity.obj: cdensity.cc \
+  ../../include/macros.h \
+  ../../include/cdensity.h \
+  ../../include/ctypes.h \
+  ../../include/chead.h \
+  ../../include/cobject.h \
+  ../../include/defs.h \
+  ../../include/util.h \
+  ../../include/cstat.h
+cdetect.obj: cdetect.cc \
+  ../../include/csimul.h \
+  ../../include/cdetect.h \
+  ../../include/defs.h \
+  ../../include/util.h \
+  ../../include/errmsg.h \
+  ../../include/chead.h \
+  ../../include/cmsgheap.h \
+  ../../include/coutvect.h \
+  ../../include/ccor.h \
+  ../../include/cobject.h \
+  ../../include/cstat.h
+cenum.obj: cenum.cc \
+  ../../include/macros.h \
+  ../../include/ctypes.h \
+  ../../include/csimul.h \
+  ../../include/cenum.h \
+  ../../include/chead.h \
+  ../../include/cobject.h \
+  ../../include/defs.h \
+  ../../include/util.h \
+  ../../include/errmsg.h \
+  ../../include/cmsgheap.h \
+  ../../include/coutvect.h \
+  ../../include/ccor.h
+cfsm.obj: cfsm.cc \
+  ../../include/macros.h \
+  ../../include/cfsm.h \
+  ../../include/ctypes.h \
+  ../../include/chead.h \
+  ../../include/cobject.h \
+  ../../include/defs.h \
+  ../../include/util.h
+cgate.obj: cgate.cc \
+  ../../include/cmessage.h \
+  ../../include/cmodule.h \
+  ../../include/carray.h \
+  ../../include/cpar.h \
+  ../../include/cenvir.h \
+  ../../include/csimul.h \
+  ../../include/macros.h \
+  ../../include/cgate.h \
+  ../../include/cobject.h \
+  ../../include/defs.h \
+  ../../include/util.h \
+  ../../include/ccor.h \
+  ../../include/chead.h \
+  ../../include/cqueue.h \
+  ../../include/errmsg.h \
+  ../../include/cmsgheap.h \
+  ../../include/coutvect.h \
+  ../../include/ctypes.h
+chead.obj: chead.cc \
+  ../../include/macros.h \
+  ../../include/chead.h \
+  ../../include/ctypes.h \
+  ../../include/cobject.h \
+  ../../include/defs.h \
+  ../../include/util.h
+chist.obj: chist.cc \
+  ../../include/macros.h \
+  ../../include/cdetect.h \
+  ../../include/chist.h \
+  ../../include/ctypes.h \
+  ../../include/chead.h \
+  ../../include/cobject.h \
+  ../../include/defs.h \
+  ../../include/util.h \
+  ../../include/cstat.h \
+  ../../include/cdensity.h
+cksplit.obj: cksplit.cc \
+  ../../include/macros.h \
+  ../../include/cenvir.h \
+  ../../include/cksplit.h \
+  ../../include/ctypes.h \
+  ../../include/chead.h \
+  ../../include/cobject.h \
+  ../../include/defs.h \
+  ../../include/util.h \
+  ../../include/cpar.h \
+  ../../include/cdensity.h \
+  ../../include/cstat.h
+cllist.obj: cllist.cc \
+  ../../include/macros.h \
+  ../../include/cllist.h \
+  ../../include/ctypes.h \
+  ../../include/chead.h \
+  ../../include/cobject.h \
+  ../../include/defs.h \
+  ../../include/util.h
+cmessage.obj: cmessage.cc \
+  ../../include/macros.h \
+  ../../include/cmodule.h \
+  ../../include/cmessage.h \
+  ../../include/ctypes.h \
+  ../../include/chead.h \
+  ../../include/cobject.h \
+  ../../include/defs.h \
+  ../../include/util.h \
+  ../../include/ccor.h \
+  ../../include/carray.h \
+  ../../include/cqueue.h \
+  ../../include/cgate.h \
+  ../../include/csimul.h \
+  ../../include/errmsg.h \
+  ../../include/cmsgheap.h \
+  ../../include/coutvect.h \
+  ../../include/cpar.h
+cmodule.obj: cmodule.cc \
+  ../../include/cmodule.h \
+  ../../include/cgate.h \
+  ../../include/cmessage.h \
+  ../../include/csimul.h \
+  ../../include/carray.h \
+  ../../include/ctypes.h \
+  ../../include/cpar.h \
+  ../../include/cnetmod.h \
+  ../../include/cenvir.h \
+  ../../include/cobject.h \
+  ../../include/ccor.h \
+  ../../include/chead.h \
+  ../../include/cqueue.h \
+  ../../include/defs.h \
+  ../../include/util.h \
+  ../../include/errmsg.h \
+  ../../include/cmsgheap.h \
+  ../../include/coutvect.h
+cmsgheap.obj: cmsgheap.cc \
+  ../../include/macros.h \
+  ../../include/cmessage.h \
+  ../../include/cmsgheap.h \
+  ../../include/ctypes.h \
+  ../../include/chead.h \
+  ../../include/cobject.h \
+  ../../include/defs.h \
+  ../../include/util.h \
+  ../../include/carray.h \
+  ../../include/cpar.h \
+  ../../include/csimul.h \
+  ../../include/errmsg.h \
+  ../../include/coutvect.h \
+  ../../include/ccor.h
+cnetmod.obj: cnetmod.cc \
+  ../../include/cpar.h \
+  ../../include/cenvir.h \
+  ../../include/cnetmod.h \
+  ../../include/cobject.h \
+  ../../include/defs.h \
+  ../../include/util.h \
+  ../../include/cmodule.h \
+  ../../include/ccor.h \
+  ../../include/chead.h \
+  ../../include/carray.h \
+  ../../include/cqueue.h \
+  ../../include/cgate.h \
+  ../../include/csimul.h \
+  ../../include/errmsg.h \
+  ../../include/cmsgheap.h \
+  ../../include/coutvect.h
+cobject.obj: cobject.cc \
+  ../../include/csimul.h \
+  ../../include/cenvir.h \
+  ../../include/macros.h \
+  ../../include/cobject.h \
+  ../../include/defs.h \
+  ../../include/util.h \
+  ../../include/errmsg.h \
+  ../../include/chead.h \
+  ../../include/cmsgheap.h \
+  ../../include/coutvect.h \
+  ../../include/ccor.h \
+  ../../include/cpar.h \
+  ../../include/ctypes.h
+coutvect.obj: coutvect.cc \
+  ../../include/coutvect.h \
+  ../../include/cmodule.h \
+  ../../include/csimul.h \
+  ../../include/cenvir.h \
+  ../../include/cobject.h \
+  ../../include/defs.h \
+  ../../include/util.h \
+  ../../include/ccor.h \
+  ../../include/chead.h \
+  ../../include/carray.h \
+  ../../include/cqueue.h \
+  ../../include/cgate.h \
+  ../../include/errmsg.h \
+  ../../include/cmsgheap.h \
+  ../../include/cpar.h
+cpacket.obj: cpacket.cc \
+  ../../include/macros.h \
+  ../../include/cpacket.h \
+  ../../include/ctypes.h \
+  ../../include/chead.h \
+  ../../include/cobject.h \
+  ../../include/defs.h \
+  ../../include/util.h \
+  ../../include/cmessage.h \
+  ../../include/carray.h \
+  ../../include/cpar.h \
+  ../../include/csimul.h \
+  ../../include/errmsg.h \
+  ../../include/cmsgheap.h \
+  ../../include/coutvect.h \
+  ../../include/ccor.h
+cpar.obj: cpar.cc \
+  ../../include/cpar.h \
+  ../../include/cstat.h \
+  ../../include/macros.h \
+  ../../include/errmsg.h \
+  ../../include/cmodule.h \
+  ../../include/csimul.h \
+  ../../include/cenvir.h \
+  ../../include/cobject.h \
+  ../../include/defs.h \
+  ../../include/util.h \
+  ../../include/ctypes.h \
+  ../../include/chead.h \
+  ../../include/ccor.h \
+  ../../include/carray.h \
+  ../../include/cqueue.h \
+  ../../include/cgate.h \
+  ../../include/cmsgheap.h \
+  ../../include/coutvect.h
+cpsquare.obj: cpsquare.cc \
+  ../../include/macros.h \
+  ../../include/cpsquare.h \
+  ../../include/ctypes.h \
+  ../../include/chead.h \
+  ../../include/cobject.h \
+  ../../include/defs.h \
+  ../../include/util.h \
+  ../../include/cdensity.h \
+  ../../include/cstat.h
+cqueue.obj: cqueue.cc \
+  ../../include/macros.h \
+  ../../include/cqueue.h \
+  ../../include/ctypes.h \
+  ../../include/chead.h \
+  ../../include/cobject.h \
+  ../../include/defs.h \
+  ../../include/util.h
+csimul.obj: csimul.cc \
+  ../../include/cmodule.h \
+  ../../include/cmessage.h \
+  ../../include/csimul.h \
+  ../../include/cenvir.h \
+  ../../include/ctypes.h \
+  ../../include/cpar.h \
+  ../../include/cnetmod.h \
+  ../../include/cstat.h \
+  ../../include/cobject.h \
+  ../../include/ccor.h \
+  ../../include/chead.h \
+  ../../include/carray.h \
+  ../../include/cqueue.h \
+  ../../include/cgate.h \
+  ../../include/defs.h \
+  ../../include/util.h \
+  ../../include/errmsg.h \
+  ../../include/cmsgheap.h \
+  ../../include/coutvect.h
+cstat.obj: cstat.cc \
+  ../../include/cstat.h \
+  ../../include/macros.h \
+  ../../include/cdetect.h \
+  ../../include/cobject.h \
+  ../../include/defs.h \
+  ../../include/util.h \
+  ../../include/ctypes.h \
+  ../../include/chead.h
+cstk.obj: cstk.cc \
+  ../../include/cstk.h \
+  ../../include/errmsg.h \
+  ../../include/ccor.h \
+  ../../include/cobject.h \
+  ../../include/defs.h \
+  ../../include/util.h
+cstruct.obj: cstruct.cc \
+  ../../include/cstruct.h \
+  ../../include/cenum.h \
+  ../../include/util.h \
+  ../../include/errmsg.h \
+  ../../include/ctypes.h \
+  ../../include/cobject.h \
+  ../../include/defs.h \
+  ../../include/chead.h
+ctopo.obj: ctopo.cc \
+  ../../include/macros.h \
+  ../../include/cmodule.h \
+  ../../include/cgate.h \
+  ../../include/cpar.h \
+  ../../include/cllist.h \
+  ../../include/ctopo.h \
+  ../../include/ctypes.h \
+  ../../include/chead.h \
+  ../../include/cobject.h \
+  ../../include/defs.h \
+  ../../include/util.h \
+  ../../include/ccor.h \
+  ../../include/carray.h \
+  ../../include/cqueue.h \
+  ../../include/csimul.h \
+  ../../include/errmsg.h \
+  ../../include/cmsgheap.h \
+  ../../include/coutvect.h
+ctypes.obj: ctypes.cc \
+  ../../include/cpar.h \
+  ../../include/cmodule.h \
+  ../../include/macros.h \
+  ../../include/ctypes.h \
+  ../../include/cobject.h \
+  ../../include/defs.h \
+  ../../include/util.h \
+  ../../include/ccor.h \
+  ../../include/chead.h \
+  ../../include/carray.h \
+  ../../include/cqueue.h \
+  ../../include/cgate.h \
+  ../../include/csimul.h \
+  ../../include/errmsg.h \
+  ../../include/cmsgheap.h \
+  ../../include/coutvect.h
+cvarhist.obj: cvarhist.cc \
+  ../../include/macros.h \
+  ../../include/cvarhist.h \
+  ../../include/ctypes.h \
+  ../../include/chead.h \
+  ../../include/cobject.h \
+  ../../include/defs.h \
+  ../../include/util.h \
+  ../../include/chist.h \
+  ../../include/cdensity.h \
+  ../../include/cstat.h
+cwatch.obj: cwatch.cc \
+  ../../include/cwatch.h \
+  ../../include/cobject.h \
+  ../../include/defs.h \
+  ../../include/util.h
+errmsg.obj: errmsg.cc
+util.obj: util.cc \
+  ../../include/util.h \
+  ../../include/csimul.h \
+  ../../include/macros.h \
+  ../../include/cwatch.h \
+  ../../include/cpacket.h \
+  ../../include/defs.h \
+  ../../include/errmsg.h \
+  ../../include/chead.h \
+  ../../include/cmsgheap.h \
+  ../../include/coutvect.h \
+  ../../include/ccor.h \
+  ../../include/cobject.h \
+  ../../include/ctypes.h \
+  ../../include/cmessage.h \
+  ../../include/carray.h \
+  ../../include/cpar.h
